github_data_collector/src/data/issue_comment/ShiqiYu_libfacedetection.txt
测试人脸数据见附件
![example](https://user-images.githubusercontent.com/37401463/71649903-79f43280-2d4d-11ea-80d6-a21586087663.jpg)

当前版本（2019-9月）检测结果见附件
![currentversion-detect](https://user-images.githubusercontent.com/37401463/71650087-bc6a3f00-2d4e-11ea-8959-35f3582e9fd6.png)

之前的版本（2019-3月）结果见附件
![previous-detect](https://user-images.githubusercontent.com/37401463/71650103-d146d280-2d4e-11ea-8351-da947348d2a3.png)


于老师您好，
我将您models文件夹下的v1模型转换成model.mnn, 输出是一个1200维的向量，我粗略的看了下向量中值，不像是正确的样子(有很多0,分布也不是很规律，没找到对应关系)，请问输出1200维度对么？
老师您好，我研究了几天也没有研究出来，树莓派上应该如何成功运行。

我想请问下老师使用的3b+，安装的系统是什么呢？ubuntu？还是官方系统呢？

各位大佬如果看到这个问题，也请帮我一下，感谢各位。
系统环境：
        centos7
执行步骤：
        mkdir build; cd build; rm -rf *
        cmake ..
        make
报错：
`error: must #include <typeinfo> before using typeid   if (typeid(signed char) != typeid(T))`
In facedetectcnn.cpp line 114
    int sumarray[8];
should be:
    __attribute__((__aligned__(32))) int sumarray[8];

so that the _mm256_store_si256() call on line 131 receives a 32-byte aligned argument.

This should also be done for the
int maxarray_int32x8[8];
around facedetectcnn.cpp line 390

于老师您好，我在使用您的caffe版本训练时，batch_size设置为16，显卡GTX 1060，但是训练起来显存几乎不怎么占用，感觉都用不到gpu的加速，和纯cpu速度差不多，请问有没有什么好的解决办法呢？
i am using wider face dataset for training
I am using v1 model prototxt and solver
but the loss does not decreases, it starts from 20 and remain within 10-20 range till 40k iterations
/home/chenzhijun/Android/android-ndk-r20/toolchains/llvm/prebuilt/linux-x86_64/lib64/clang/8.0.7/include/mmintrin.h:47:5: error: use of undeclared identifier
      '__builtin_ia32_emms'; did you mean '__builtin_isless'?
    __builtin_ia32_emms();
    ^
/home/chenzhijun/Android/android-ndk-r20/toolchains/llvm/prebuilt/linux-x86_64/lib64/clang/8.0.7/include/mmintrin.h:47:5: note: '__builtin_isless' declared here
/home/chenzhijun/Android/android-ndk-r20/toolchains/llvm/prebuilt/linux-x86_64/lib64/clang/8.0.7/include/mmintrin.h:47:25: error: too few arguments to function call,
      expected 2, have 0
    __builtin_ia32_emms();
                        ^
/home/chenzhijun/Android/android-ndk-r20/toolchains/llvm/prebuilt/linux-x86_64/lib64/clang/8.0.7/include/mmintrin.h:64:19: error: use of undeclared identifier
      '__builtin_ia32_vec_init_v2si'
    return (__m64)__builtin_ia32_vec_init_v2si(__i, 0);
                  ^
/home/chenzhijun/Android/android-ndk-r20/toolchains/llvm/prebuilt/linux-x86_64/lib64/clang/8.0.7/include/mmintrin.h:81:12: error: use of undeclared identifier
      '__builtin_ia32_vec_ext_v2si'
    return __builtin_ia32_vec_ext_v2si((__v2si)__m, 0);
           ^
/home/chenzhijun/Android/android-ndk-r20/toolchains/llvm/prebuilt/linux-x86_64/lib64/clang/8.0.7/include/mmintrin.h:143:19: error: use of undeclared identifier
      '__builtin_ia32_packsswb'
    return (__m64)__builtin_ia32_packsswb((__v4hi)__m1, (__v4hi)__m2);
                  ^
/home/chenzhijun/Android/android-ndk-r20/toolchains/llvm/prebuilt/linux-x86_64/lib64/clang/8.0.7/include/mmintrin.h:173:19: error: use of undeclared identifier
      '__builtin_ia32_packssdw'
    return (__m64)__builtin_ia32_packssdw((__v2si)__m1, (__v2si)__m2);
                  ^
/home/chenzhijun/Android/android-ndk-r20/toolchains/llvm/prebuilt/linux-x86_64/lib64/clang/8.0.7/include/mmintrin.h:203:19: error: use of undeclared identifier
      '__builtin_ia32_packuswb'
    return (__m64)__builtin_ia32_packuswb((__v4hi)__m1, (__v4hi)__m2);
                  ^
/home/chenzhijun/Android/android-ndk-r20/toolchains/llvm/prebuilt/linux-x86_64/lib64/clang/8.0.7/include/mmintrin.h:230:19: error: use of undeclared identifier
      '__builtin_ia32_punpckhbw'
    return (__m64)__builtin_ia32_punpckhbw((__v8qi)__m1, (__v8qi)__m2);
                  ^
/home/chenzhijun/Android/android-ndk-r20/toolchains/llvm/prebuilt/linux-x86_64/lib64/clang/8.0.7/include/mmintrin.h:253:19: error: use of undeclared identifier
      '__builtin_ia32_punpckhwd'
    return (__m64)__builtin_ia32_punpckhwd((__v4hi)__m1, (__v4hi)__m2);
                  ^
/home/chenzhijun/Android/android-ndk-r20/toolchains/llvm/prebuilt/linux-x86_64/lib64/clang/8.0.7/include/mmintrin.h:274:19: error: use of undeclared identifier
      '__builtin_ia32_punpckhdq'
    return (__m64)__builtin_ia32_punpckhdq((__v2si)__m1, (__v2si)__m2);
                  ^
/home/chenzhijun/Android/android-ndk-r20/toolchains/llvm/prebuilt/linux-x86_64/lib64/clang/8.0.7/include/mmintrin.h:301:19: error: use of undeclared identifier
      '__builtin_ia32_punpcklbw'
    return (__m64)__builtin_ia32_punpcklbw((__v8qi)__m1, (__v8qi)__m2);
                  ^
/home/chenzhijun/Android/android-ndk-r20/toolchains/llvm/prebuilt/linux-x86_64/lib64/clang/8.0.7/include/mmintrin.h:324:19: error: use of undeclared identifier
      '__builtin_ia32_punpcklwd'
    return (__m64)__builtin_ia32_punpcklwd((__v4hi)__m1, (__v4hi)__m2);
                  ^
/home/chenzhijun/Android/android-ndk-r20/toolchains/llvm/prebuilt/linux-x86_64/lib64/clang/8.0.7/include/mmintrin.h:345:19: error: use of undeclared identifier
      '__builtin_ia32_punpckldq'
    return (__m64)__builtin_ia32_punpckldq((__v2si)__m1, (__v2si)__m2);
                  ^
/home/chenzhijun/Android/android-ndk-r20/toolchains/llvm/prebuilt/linux-x86_64/lib64/clang/8.0.7/include/mmintrin.h:366:19: error: use of undeclared identifier
      '__builtin_ia32_paddb'
    return (__m64)__builtin_ia32_paddb((__v8qi)__m1, (__v8qi)__m2);
                  ^
/home/chenzhijun/Android/android-ndk-r20/toolchains/llvm/prebuilt/linux-x86_64/lib64/clang/8.0.7/include/mmintrin.h:387:19: error: use of undeclared identifier
      '__builtin_ia32_paddw'
    return (__m64)__builtin_ia32_paddw((__v4hi)__m1, (__v4hi)__m2);
                  ^
/home/chenzhijun/Android/android-ndk-r20/toolchains/llvm/prebuilt/linux-x86_64/lib64/clang/8.0.7/include/mmintrin.h:408:19: error: use of undeclared identifier
      '__builtin_ia32_paddd'
    return (__m64)__builtin_ia32_paddd((__v2si)__m1, (__v2si)__m2);
                  ^
/home/chenzhijun/Android/android-ndk-r20/toolchains/llvm/prebuilt/linux-x86_64/lib64/clang/8.0.7/include/mmintrin.h:430:19: error: use of undeclared identifier
      '__builtin_ia32_paddsb'
    return (__m64)__builtin_ia32_paddsb((__v8qi)__m1, (__v8qi)__m2);
                  ^
/home/chenzhijun/Android/android-ndk-r20/toolchains/llvm/prebuilt/linux-x86_64/lib64/clang/8.0.7/include/mmintrin.h:453:19: error: use of undeclared identifier
      '__builtin_ia32_paddsw'
    return (__m64)__builtin_ia32_paddsw((__v4hi)__m1, (__v4hi)__m2);
                  ^
/home/chenzhijun/Android/android-ndk-r20/toolchains/llvm/prebuilt/linux-x86_64/lib64/clang/8.0.7/include/mmintrin.h:475:19: error: use of undeclared identifier
      '__builtin_ia32_paddusb'
    return (__m64)__builtin_ia32_paddusb((__v8qi)__m1, (__v8qi)__m2);
                  ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]

Hi,
Thanks for your great work.
I try to train the face detection model using nvidia-caffe(https://github.com/NVIDIA/caffe). 
But I met some errors as following:
![image](https://user-images.githubusercontent.com/20535427/68944083-f3f54a00-07e7-11ea-83a4-53a9ddae9733.png)

It seems that annotated_data_layer.cpp，line182: Packing packing = NHWC;
should be changed to ：
Packing packing = NCHW.
Could you please give me some guidance?
Thanks again.